--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -1,3 +1,11 @@
+<% if @errors %>
+<ul>
+<% @errors.each do |error| %>
+  <li><%= error %></li>
+<% end %>
+</ul>
+<%end %>
+
 <% if logged_in? %>
 Welcome back, <%= @current_user.first_name %>!
 <% end %>
@@ -8,10 +16,28 @@ Welcome back, <%= @current_user.first_name %>!
 
 <% if logged_in? %>
 
-Attending:
-<ul>
-<%= @concert.attendees.each do |person| %>!
-  <li><%= person.first_name%> <%= person.last_name %> </li>
-<% end %>
-</ul>
+  Attending:
+  <ul>
+    <%= @concert.attendees.each do |person| %>
+      <% if person.id == current_user.id %>
+        <li><strong><%= person.first_name%> <%= person.last_name %> </strong></li>
+      <%else %>
+        <li><%= person.first_name%> <%= person.last_name %> </li>
+      <%end %>
+    <% end %>
+  </ul>
+
+<%else %>
+  Attending:
+    <ul>
+    <%= @concert.attendees.each do |person| %>
+
+        <li><%= person.first_name%> <%= person.last_name %> </li>
+
+      <li><%= person.first_name%> <%= person.last_name %> </li>
+    <% end %>
+    </ul>
 <%end %>
+
+ <%= render 'shared/new', locals: {attendance: @attendance}, remote: true, layout: false %>
+
