--- a/app/views/shared/_new.html.erb
+++ b/app/views/shared/_new.html.erb
@@ -1,4 +1,4 @@
- <%= form_for @attendance, :url =>attendances_path do |form| %>
+ <%= form_for @attendance, :url =>attendances_path, remote: true do |form| %>
   <%= form.hidden_field :attendee_id, :value => @current_user.id %>
   <%= form.hidden_field :concert_id, :value => @concert.id %><br>
   <%= form.submit %>
