--- a/app/assets/stylesheets/concerts.scss
+++ b/app/assets/stylesheets/concerts.scss
@@ -30,6 +30,7 @@
     background-size: cover;
     position: relative;
 }
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,700;);
 
 .snip1585 {
   background-color: #000;
