--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -5,7 +5,7 @@
 
     <% @concerts.each do |concert| %>
       <figure class="snip1585">
-        <img src=<%= concert.image %></img>
+        <img src=<%= concert.image %>></img>
         <figcaption>
             <h3><%= concert.band %><span><%= concert.venue %> on <%= concert.date.strftime("%B %e") %> at <%=concert.start_time %></span></h3>
         </figcaption>
