--- a/app/views/shared/_person.html.erb
+++ b/app/views/shared/_person.html.erb
@@ -1,5 +1,7 @@
+<ul class="add">
 <% if person.id == current_user.id %>
   <li><strong><%= person.first_name%> <%= person.last_name %> </strong></li>
 <%else %>
-  <li><%= person.first_name%> <%= person.last_name %> </li>
+  <li><%= person.first_name%> <%= person.last_name %></li>
 <%end %>
+</ul>
