--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -30,11 +30,13 @@ body {
 .nav-item {
   display: inline-block;
   padding: 15px 20px;
-  height: 40px;
+  height: 80px;
   line-height: 40px;
   color: #fff;
   text-decoration-color: #fff;
   &:hover{
+    margin-top: 0;
+    padding-top: 0;
     background-color: #444;
     text-decoration-color: #fff;
   }
